# libopeninput

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .triage-policies.yml  CODING_STYLE  CODING_STYLE.md  CONTRIBUTING.md  Makefile.am  README.md  README.txt  autogen.sh  circle.yml  configure.ac  meson.build  meson_options.txt
.gitlab-ci/: check-commit.py  ci.template  config.yml  generate-gitlab-ci.py  gitlab-ci.tmpl  libinput.spec.in  meson-build.sh  meson-junit-report.py  meson-prep.sh  meson-test.sh  start-in-systemd.sh  ubuntu_install.sh  whitespace-check.py
ci/: bootstrap.sh
data/: 10-generic-keyboard.quirks  10-generic-lid.quirks  10-generic-trackball.quirks  30-vendor-aiptek.quirks  30-vendor-alps.quirks  30-vendor-cyapa.quirks  30-vendor-elantech.quirks  30-vendor-huion.quirks  30-vendor-ibm.quirks  30-vendor-logitech.quirks  30-vendor-microsoft.quirks  30-vendor-razer.quirks  30-vendor-synaptics.quirks  30-vendor-wacom.quirks  50-system-apple.quirks  50-system-asus.quirks  50-system-chicony.quirks  50-system-cyborg.quirks  50-system-dell.quirks  50-system-google.quirks  50-system-hp.quirks  50-system-lenovo.quirks  50-system-system76.quirks  README.md
doc/: Makefile.am  absolute-axes.dox  absolute-coordinate-ranges.dox  architecture.dox  building.dox  button_debouncing.dox  clickpad-softbuttons.dox  contributing.dox  device-configuration-via-udev.dox  device-quirks.dox  doxygen-to-sphinx.sh  faqs.dox  git-version.dox  libinput.doxygen.in  meson.build  normalization-of-relative-motion.dox  page-hierarchy.dox  palm-detection.dox  pointer-acceleration.dox  reporting-bugs.dox  scrolling.dox  seats.dox  switches.dox  t440-support.dox  tablet-support.dox  tapping.dox  test-suite.dox  timestamps.dox  tools.dox  touchpad-jitter.dox  touchpad-jumping-cursors.dox  touchpad-pressure.dox  trackpoints.dox  what-is-libinput.dox
doc/api/: libinput.doxygen.in  mainpage.dox  meson.build
doc/api/style/: libinputdoxygen.css
doc/style/: header.html  libinputdoxygen.css
doc/user/: 404.html  absolute-axes.rst  absolute-coordinate-ranges.rst  architecture.rst  building.rst  button_debouncing.rst  clickpad-softbuttons.rst  clickpad-with-right-button.rst  conf.py.in  configuration.rst  contributing.rst  development.rst  device-configuration-via-udev.rst  device-quirks.rst  drag-3fg.rst  faqs.rst  features.rst  gestures.rst  ignoring-devices.rst  incorrectly-enabled-hires.rst  index.rst  lua-plugins.rst  meson.build  page-hierarchy.rst  palm-detection.rst  pointer-acceleration.rst  reporting-bugs.rst  scrolling.rst  switches.rst  t440-support.rst  tablet-support.rst  tapping.rst  test-suite.rst  tools.rst  touchpad-jitter.rst  touchpad-jumping-cursors.rst  touchpad-pressure-debugging.rst  touchpad-pressure.rst  touchpads.rst  trackpoint-configuration.rst  (+3 more)
doc/user/dot/: libinput-contexts.gv  plugin-stack.gv
plugins/: 10-copilot-key-override.lua  10-delay-motion.lua  10-disable-feature.lua  10-dwt.lua  10-example.lua  10-logitech-mx-master-horiz-scroll.lua  10-pointer-go-faster.lua  10-pointer-go-slower.lua  10-tablet-mouse-control.lua  10-wheel-to-button.lua  meson.build
quirks/: 10-generic-keyboard.quirks  30-vendor-a4tech.quirks  30-vendor-clevetura.quirks  30-vendor-contour.quirks  30-vendor-cypress.quirks  30-vendor-elantech.quirks  30-vendor-glorious.quirks  30-vendor-goodix.quirks  30-vendor-hantick.quirks  30-vendor-huion.quirks  30-vendor-ite.quirks  30-vendor-kensington.quirks  30-vendor-logitech.quirks  30-vendor-microsoft.quirks  30-vendor-nulea.quirks  30-vendor-oracle.quirks  30-vendor-pixart.quirks  30-vendor-qemu.quirks  30-vendor-razer.quirks  30-vendor-starlabs.quirks  30-vendor-synaptics.quirks  30-vendor-trust.quirks  30-vendor-vmware.quirks  30-vendor-wacom.quirks  50-framework.quirks  50-system-acer.quirks  50-system-apple.quirks  50-system-asus.quirks  50-system-chicony.quirks  50-system-chuwi.quirks  50-system-cyborg.quirks  50-system-dell.quirks  50-system-framework.quirks  50-system-gigabyte.quirks  50-system-google.quirks  50-system-gpd.quirks  50-system-graviton.quirks  50-system-honor.quirks  50-system-hp.quirks  50-system-huawei.quirks  (+14 more)
src/: Makefile.am  builddir.h  evdev-debounce.c  evdev-fallback.c  evdev-fallback.h  evdev-frame.h  evdev-lid.c  evdev-middle-button.c  evdev-mt-touchpad-buttons.c  evdev-mt-touchpad-edge-scroll.c  evdev-mt-touchpad-gestures.c  evdev-mt-touchpad-tap.c  evdev-mt-touchpad-thumb.c  evdev-mt-touchpad.c  evdev-mt-touchpad.h  evdev-plugin.c  evdev-plugin.h  evdev-tablet-pad-leds.c  evdev-tablet-pad.c  evdev-tablet-pad.h  evdev-tablet.c  evdev-tablet.h  evdev-totem.c  evdev-wheel.c  evdev.c  evdev.h  filter-custom.c  filter-flat.c  filter-low-dpi.c  filter-mouse.c  filter-private.h  filter-tablet.c  filter-touchpad-flat.c  filter-touchpad-x230.c  filter-touchpad.c  filter-trackpoint-flat.c  filter-trackpoint.c  filter.c  filter.h  libinput-feature.h  (+70 more)
test/: device.c  (+170 more)
tools/: .gitignore  Makefile.am  event-debug.c  event-gui.c  install-compat-scripts.sh  libinput-analyze-buttons.man  libinput-analyze-buttons.py  libinput-analyze-per-slot-delta.man  libinput-analyze-per-slot-delta.py  libinput-analyze-recording.py  libinput-analyze.c  libinput-analyze.man  libinput-debug-events.1  libinput-debug-events.c  libinput-debug-events.man  libinput-debug-gui.1  libinput-debug-gui.c  libinput-debug-gui.man  libinput-debug-tablet-pad.c  libinput-debug-tablet-pad.man  libinput-debug-tablet.c  libinput-list-devices.1  libinput-list-devices.c  libinput-list-devices.man  libinput-list-kernel-devices.man  libinput-list-kernel-devices.py  libinput-list-quirks.c  libinput-list-quirks.man  libinput-measure-fuzz  libinput-measure-fuzz.py  libinput-measure-touch-size  libinput-measure-touch-size.man  libinput-measure-touch-size.py  libinput-measure-touchpad-pressure  libinput-measure-touchpad-pressure.man  libinput-measure-touchpad-pressure.py  libinput-measure-touchpad-size.man  libinput-measure-touchpad-tap  libinput-measure-touchpad-tap.1  libinput-measure-touchpad-tap.c  (+29 more)
(+17 files in other folders)
