option('udev-dir',
       type: 'string',
       default: '',
       description: 'udev base directory [default=$prefix/lib/udev]')
option('libwacom',
       type: 'boolean',
       default: true,
       description: 'Use libwacom for tablet identification (default=true)')
option('debug-gui',
       type: 'boolean',
       default: true,
       description: 'Enable the "debug-gui" feature in the libinput tool [default=true]')
option('tests',
       type: 'boolean',
       default: true,
       description: 'Build the tests [default=true]')
option('documentation',
       type: 'boolean',
       default: true,
       description: 'Build the documentation [default=true]')
